Import of SHARYANTO/Sub-Spec-Wrapper-0.02 from CPAN.
gitpan-cpan-distribution: Sub-Spec-Wrapper
gitpan-cpan-version:      0.02
gitpan-cpan-path:         SHARYANTO/Sub-Spec-Wrapper-0.02.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Sub::Spec::Wrapper
 
+0.02     2011-08-31
+
+         Build and POD fixes.
+
+
 0.01     2011-08-31
 
          First release.
