--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Sub::Spec::Wrapper - Wrap subroutine to its implement Sub::Spec clauses
 
 VERSION
-    version 0.02
+    version 0.03
 
 SYNOPSIS
      use Sub::Spec::Wrapper qw(wrap_sub);
@@ -33,17 +33,11 @@ FUNCTIONS
 
     Arguments ("*" denotes required arguments):
 
-    *   force => *bool* (default 0)
+    *   force => *bool*
 
-        Whether to force wrap again even when sub has been wrapped.
+    *   spec => *hash*
 
-    *   spec* => *hash*
-
-        The sub spec.
-
-    *   sub* => *code*
-
-        The code to wrap.
+    *   sub => *code*
 
 SEE ALSO
     Sub::Spec
