Import of SHARYANTO/Sub-Spec-Wrapper-0.04 from CPAN.
gitpan-cpan-distribution: Sub-Spec-Wrapper
gitpan-cpan-version:      0.04
gitpan-cpan-path:         SHARYANTO/Sub-Spec-Wrapper-0.04.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Sub::Spec::Wrapper
 
+0.04     2011-10-19
+
+         No functional changes. Add missing dependency to
+         Sub::Spec::ConvertArgs::Array [thanks cpant & Andreas].
+
+
 0.03     2011-09-22
 
          [ENHANCEMENTS]
