Import of SHARYANTO/Sub-Spec-Wrapper-0.05 from CPAN.
gitpan-cpan-distribution: Sub-Spec-Wrapper
gitpan-cpan-version:      0.05
gitpan-cpan-path:         SHARYANTO/Sub-Spec-Wrapper-0.05.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Sub::Spec::Wrapper
 
+0.05     2012-01-21
+
+         No functional changes. Mark deprecated.
+
+
 0.04     2011-10-19
 
          No functional changes. Add missing dependency to
