--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Sub::Spec::Wrapper - Wrap subroutine to its implement Sub::Spec clauses
 
 VERSION
-    version 0.04
+    version 0.05
 
 SYNOPSIS
      use Sub::Spec::Wrapper qw(wrap_sub);
@@ -10,6 +10,12 @@ SYNOPSIS
      my $res = $sub->(); # [500, "Sub died: test"]
 
 DESCRIPTION
+    NOTICE: This module and the Sub::Spec standard is deprecated as of Jan
+    2012. Rinci is the new specification to replace Sub::Spec, it is about
+    95% compatible with Sub::Spec, but corrects a few issues and is more
+    generic. "Perinci::*" is the Perl implementation for Rinci and many of
+    its modules can handle existing Sub::Spec sub specs.
+
     WARNING: PRELIMINARY VERSION, NOT EVERYTHING DESCRIBED IS IMPLEMENTED
 
     This module provides wrap_sub() that implements/utilizes many spec
@@ -52,7 +58,7 @@ AUTHOR
     Steven Haryanto <stevenharyanto@gmail.com>
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2011 by Steven Haryanto.
+    This software is copyright (c) 2012 by Steven Haryanto.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
